--- a/Index.html
+++ b/Index.html
@@ -557,7 +557,7 @@
             
             const currentPath = window.location.pathname;
             const baseUrl = window.location.origin + currentPath.substring(0, currentPath.lastIndexOf('/') + 1);
-            const shareLink = `${baseUrl}celebrate.html?id=${uniqueId}`;
+            const shareLink = `${baseUrl}Celebrate.html?id=${uniqueId}`;
 
             linkText.textContent = shareLink;
             linkDisplay.classList.add('show');
