--- a/index.html
+++ b/index.html
@@ -490,7 +490,7 @@
         }
 
         // Aggressive compression for smaller URLs
-        function compressImage(base64, maxWidth = 400) {
+        function compressImage(base64, maxWidth = 300) {
             return new Promise((resolve) => {
                 const img = new Image();
                 img.onload = function() {
@@ -508,8 +508,8 @@
                     const ctx = canvas.getContext('2d');
                     ctx.drawImage(img, 0, 0, width, height);
                     
-                    // More aggressive compression
-                    resolve(canvas.toDataURL('image/jpeg', 0.5));
+                    // Very aggressive compression for smallest URL
+                    resolve(canvas.toDataURL('image/jpeg', 0.3));
                 };
                 img.src = base64;
             });
@@ -530,7 +530,7 @@
             const photos = [];
             const img = document.querySelector('#preview1 .preview-image');
             if (img) {
-                const compressed = await compressImage(img.src, 600);
+                const compressed = await compressImage(img.src, 300);
                 photos.push(compressed);
             } else {
                 photos.push('');
